Added ETH formating

--- a/frontend/src/app/components/addresses/address-details/address-details.component.html
+++ b/frontend/src/app/components/addresses/address-details/address-details.component.html
@@ -41,7 +41,7 @@
                             <th scope="col">Transaction Hash</th>
                             <th scope="col">From</th>
                             <th scope="col">To</th>
-                            <th scope="col">Quantity</th>
+                            <th scope="col">Quantity (ETH)</th>
                             <th scope="col">Block Height</th>
                             <th scope="col">Time Stamp</th>
                             <th scope="col">Status</th>
