--- a/frontend/src/app/components/transactions/latest-transactions-overview/latest-transactions-overview.component.html
+++ b/frontend/src/app/components/transactions/latest-transactions-overview/latest-transactions-overview.component.html
@@ -19,7 +19,7 @@
                     <span style="display: table-cell;"><a [routerLink]="['/address', item.to]" [innerText]="item.to"></a></span>
                 </span>
                 <span style="display: table-row;"> 
-                    <span style="display: table-cell;"> Quantity: </span>
+                    <span style="display: table-cell;"> Quantity (ETH): </span>
                     <span style="display: table-cell;" [innerText]="item.quantity"></span>
                 </span>
                 <span style="display: table-row;"> 
